# couchbase-simple

./: .gitignore  LICENSE  README.md  couchbase-simple.cabal  stack.yaml
benchmark/: Benchmark.hs
include/libcouchbase/: internalstructs.h
scratch/: Pool.hs  test.hs  tests.hs
src/Database/: Couchbase.hs
src/Database/Couchbase/: Commands.hs  Connection.hs  ConnectionContext.hs  Core.hs  JSON.hs  Protocol.hs  ProtocolPipelining.hs  Raw.chs  Types.hs  URL.hs
src/Database/Couchbase/Core/: Internal.hs
test/Database/Couchbase/: CouchbaseSpec.hs  RawSpec.hs
